<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/t1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/record_id" />

    <EditText
        android:id="@+id/t2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name" />
    <EditText
        android:id="@+id/t3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/second_name"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_to_room"
        android:id="@+id/b1"
        android:padding="10dp"
        android:backgroundTint="#2AAA8A"
        android:layout_marginTop="30dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FetchData"
        android:id="@+id/b2"
        android:padding="10dp"
        android:backgroundTint="#2AAA8A"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl"
        android:layout_marginTop="30dp"
        android:text=""/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/cardview_shadow_start_color">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:id="@+id/dataholder"/>
    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>