<?xml version="1.0" encoding="utf-8" ?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:elevation="10dp"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/recid"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/muneeb"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/recfname"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/shahid"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/reclname"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>




